    * action DeletePage and RenamePage could now be used for subpages of a page too
    * Added Action CopyPage so you can use now an existing page or page hierarchy as template for a new page, see FeatureRequests/CloneOrCopyPages
      TODO: we need a copy icon in RC
    * Session handling for logged-in users and (not by default due to expiry
      problems) anonymous users.
    * interwiki auth: You need to define cfg.trusted_wikis and
       cfg.user_autocreate to use it. Logging in works by entering:
      Name: RemoteWikiName RemoteUserName
      Password: remotepass
      Then moin contacts RemoteWikiName after looking it up in the interwiki
      map and tries to authenticate there using RemoteUserName and remotepass.
      If it succeeds, the remote wiki will return the remote user profile items
      and your local moin will autocreate an account with these values.

  Bugfixes:
    * on action "info" page, "revert" link will not be displayed for empty page
      revisions (but you just can delete the current page to get an empty rev.)
    * fix vanishing strike markup after gui editor usage
    * fix deletion of empty Interwiki links ([wiki:MoinMaster: mm entry page])
    * fix mod_python attachment upload bug (thanks to Nick Phillips)
    * fix show_version to show it in the same way as SystemInfo
    * allow "-" in usernames (fixes "Invalid user name" msg)
    * fixed smiley caching bug (smileys didn't change theme)
    * fixed backtrace when user removed css_url entry from user_form_fields
    * Fixed the output of macro and "attachment:" usages of the rst parser.
    * Removed Twisted request object reverse DNS lookup
    * cfg.editor_quickhelp was not parsed with the wiki parser when customized
    * fixed MoinMoin:MoinMoinBugs/GuiEditorDeletesNewBulletText
    * fixed MoinMoin:MoinMoinBugs/HtmlTextConvertTables
    * updated ImageLink macro
    * Added a (less broken) MoinMoin.support.difflib, details see there.